[gd_scene load_steps=16 format=2]

[ext_resource path="res://escenas/characters/character model/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enemy/whale/idle.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/whale/run.png" type="Texture" id=3]
[ext_resource path="res://escenas/characters/enemy base/EnemyBase.gd" type="Script" id=4]
[ext_resource path="res://escenas/characters/enemy base/Run.gd" type="Script" id=5]
[ext_resource path="res://escenas/characters/enemy base/Idle.gd" type="Script" id=6]
[ext_resource path="res://escenas/characters/enemy base/EnemyBaseSM.gd" type="Script" id=7]
[ext_resource path="res://assets/enemy/whale/attack.png" type="Texture" id=8]
[ext_resource path="res://escenas/characters/enemy base/Attack.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.5, 18 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 44 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 4.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 44 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200, 10 )

[node name="EnemyBase" instance=ExtResource( 1 )]
script = ExtResource( 4 )
speed = 50.0

[node name="Collision" parent="." index="0"]
position = Vector2( 1.5, -20 )
shape = SubResource( 1 )

[node name="Sprite" parent="Pivot" index="0"]
position = Vector2( 0, -25 )
texture = ExtResource( 2 )
flip_h = true
hframes = 44

[node name="RayFloor" type="RayCast2D" parent="Pivot" index="1"]
position = Vector2( 32, -6 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="RayWall" type="RayCast2D" parent="Pivot" index="2"]
position = Vector2( 35, -8 )
enabled = true
cast_to = Vector2( 25, 0 )

[node name="Animation" parent="." index="2"]
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 6 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="Detector" type="Area2D" parent="." index="3"]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector" index="0"]
position = Vector2( 0, -19 )
shape = SubResource( 2 )

[node name="EnemyBaseSM" type="Node" parent="." index="4"]
script = ExtResource( 7 )

[node name="Idle" type="Node" parent="EnemyBaseSM" index="0"]
script = ExtResource( 6 )

[node name="Run" type="Node" parent="EnemyBaseSM" index="1"]
script = ExtResource( 5 )

[node name="Attack" type="Node" parent="EnemyBaseSM" index="2"]
script = ExtResource( 9 )

[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
